@@ -24,10 +24,10 @@ L1TopoRDO:
      0x81000201      L1Topo TOB:  ctp_signal 0x1 ( index 1 clock 0 fpga 0 ) overflow bits 0b00000010 trigger bits 0b00000001
      0x82000330      L1Topo TOB:  ctp_signal 0x2 ( index 0 clock 1 fpga 0 ) overflow bits 0b00000011 trigger bits 0b00110000
      0x83000402      L1Topo TOB:  ctp_signal 0x3 ( index 1 clock 1 fpga 0 ) overflow bits 0b00000100 trigger bits 0b00000010
-     0x84000510      L1Topo TOB:  ctp_signal 0x4 ( index 0 clock 0 fpga 1 ) overflow bits 0b00000101 trigger bits 0b00010000
-     0x850006f6      L1Topo TOB:  ctp_signal 0x5 ( index 1 clock 0 fpga 1 ) overflow bits 0b00000110 trigger bits 0b11110110
-     0x860007b0      L1Topo TOB:  ctp_signal 0x6 ( index 0 clock 1 fpga 1 ) overflow bits 0b00000111 trigger bits 0b10110000
-     0x87000800      L1Topo TOB:  ctp_signal 0x7 ( index 1 clock 1 fpga 1 ) overflow bits 0b00001000 trigger bits 0b00000000
+     0x88000510      L1Topo TOB:  ctp_signal 0x8 ( index 0 clock 0 fpga 1 ) overflow bits 0b00000101 trigger bits 0b00010000
+     0x890006f6      L1Topo TOB:  ctp_signal 0x9 ( index 1 clock 0 fpga 1 ) overflow bits 0b00000110 trigger bits 0b11110110
+     0x8a0007b0      L1Topo TOB:  ctp_signal 0xa ( index 0 clock 1 fpga 1 ) overflow bits 0b00000111 trigger bits 0b10110000
+     0x8b000800      L1Topo TOB:  ctp_signal 0xb ( index 1 clock 1 fpga 1 ) overflow bits 0b00001000 trigger bits 0b00000000
 L1TopoRDO:
      SourceID: 0x00910090 ROI
      Errors: []
@@ -37,16 +37,16 @@ L1TopoRDO:
      0x810020ab      L1Topo TOB:  ctp_signal 0x1 ( index 1 clock 0 fpga 0 ) overflow bits 0b00100000 trigger bits 0b10101011
      0x82003002      L1Topo TOB:  ctp_signal 0x2 ( index 0 clock 1 fpga 0 ) overflow bits 0b00110000 trigger bits 0b00000010
      0x83004028      L1Topo TOB:  ctp_signal 0x3 ( index 1 clock 1 fpga 0 ) overflow bits 0b01000000 trigger bits 0b00101000
-     0x84005000      L1Topo TOB:  ctp_signal 0x4 ( index 0 clock 0 fpga 1 ) overflow bits 0b01010000 trigger bits 0b00000000
-     0x85006083      L1Topo TOB:  ctp_signal 0x5 ( index 1 clock 0 fpga 1 ) overflow bits 0b01100000 trigger bits 0b10000011
-     0x86007045      L1Topo TOB:  ctp_signal 0x6 ( index 0 clock 1 fpga 1 ) overflow bits 0b01110000 trigger bits 0b01000101
-     0x87008079      L1Topo TOB:  ctp_signal 0x7 ( index 1 clock 1 fpga 1 ) overflow bits 0b10000000 trigger bits 0b01111001
+     0x88005000      L1Topo TOB:  ctp_signal 0x8 ( index 0 clock 0 fpga 1 ) overflow bits 0b01010000 trigger bits 0b00000000
+     0x89006083      L1Topo TOB:  ctp_signal 0x9 ( index 1 clock 0 fpga 1 ) overflow bits 0b01100000 trigger bits 0b10000011
+     0x8a007045      L1Topo TOB:  ctp_signal 0xa ( index 0 clock 1 fpga 1 ) overflow bits 0b01110000 trigger bits 0b01000101
+     0x8b008079      L1Topo TOB:  ctp_signal 0xb ( index 1 clock 1 fpga 1 ) overflow bits 0b10000000 trigger bits 0b01111001
 Trigger decision bits:
-  ref 01111001010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
- test 01111001010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+  ref 01101010100001110010000000100010010011001100010101010001000010010101010100010100100010110000000000000000000010010000101000000000
+ test 01101010100001110010000000100010010011001100010101010001000010010101010100010100100010110000000000000000000010010000101000000000
 Trigger overflow bits:
-  ref 10000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
- test 10000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
+  ref 10010100000000000011101100000000001001000000000000001011000000000000000010010100000000000011101100000000001001000000000000001011
+ test 10010100000000000011101100000000001001000000000000001011000000000000000010010100000000000011101100000000001001000000000000001011
 ** test10: L1Topo::triggerBitIndex **
 size of unsigned long 8 size of uint32_t 4
 module, ROIword, (index clock fpga), index, multiple of 8?
@@ -54,18 +54,18 @@ module, ROIword, (index clock fpga), index, multiple of 8?
 0 0x81000000 ( 1 0 0 ) -> 8 true
 0 0x82000000 ( 0 1 0 ) -> 16 true
 0 0x83000000 ( 1 1 0 ) -> 24 true
-0 0x84000000 ( 0 0 1 ) -> 32 true
-0 0x85000000 ( 1 0 1 ) -> 40 true
-0 0x86000000 ( 0 1 1 ) -> 48 true
-0 0x87000000 ( 1 1 1 ) -> 56 true
+0 0x84000000 ( 0 0 0 ) -> 0 true
+0 0x85000000 ( 1 0 0 ) -> 8 true
+0 0x86000000 ( 0 1 0 ) -> 16 true
+0 0x87000000 ( 1 1 0 ) -> 24 true
 1 0x80000000 ( 0 0 0 ) -> 64 true
 1 0x81000000 ( 1 0 0 ) -> 72 true
 1 0x82000000 ( 0 1 0 ) -> 80 true
 1 0x83000000 ( 1 1 0 ) -> 88 true
-1 0x84000000 ( 0 0 1 ) -> 96 true
-1 0x85000000 ( 1 0 1 ) -> 104 true
-1 0x86000000 ( 0 1 1 ) -> 112 true
-1 0x87000000 ( 1 1 1 ) -> 120 true
+1 0x84000000 ( 0 0 0 ) -> 64 true
+1 0x85000000 ( 1 0 0 ) -> 72 true
+1 0x86000000 ( 0 1 0 ) -> 80 true
+1 0x87000000 ( 1 1 0 ) -> 88 true
 ** test11: L1Topo::Error **
 0 ROB Error
 1 ROD Error
