@@ -61,6 +61,7 @@ namespace L1Topo {
   }
 
   // CTP index can be unpacked into 3 bits: index, clock and fpga
+  // 
   uint32_t L1TopoTOB::index() const{
     return m_ctp_signal & 0x1;
   }
@@ -68,7 +69,7 @@ namespace L1Topo {
     return (m_ctp_signal >> 1) & 0x1;
   }
   uint32_t L1TopoTOB::fpga() const{
-    return (m_ctp_signal >> 2) & 0x1;
+    return (m_ctp_signal >> 3) & 0x1;
   }
 
   std::ostream& operator<<(std::ostream& os, const L1TopoTOB& c) {
